--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 
     <script>
     
-    const socket = io('http://localhost:8080');
+    const socket = io('https://react-socket-server09.herokuapp.com/');
 
     //Referencias al DOM
     const form = document.getElementById('miForm');
